--- a/app/src/main/res/layout/package_detail.xml
+++ b/app/src/main/res/layout/package_detail.xml
@@ -41,7 +41,7 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Pakej Ekonomi "
+                        android:text="Bajet"
                         android:textSize="15dp"/>
 
                 </LinearLayout>
@@ -97,19 +97,84 @@
                         android:layout_height="wrap_content"
                         android:orientation="horizontal"
                         >
-                        <Button
+                        <androidx.cardview.widget.CardView
+                            app:cardElevation="5dp"
+                            app:cardCornerRadius="15dp"
+                            app:cardBackgroundColor="@color/lavender"
                             android:layout_marginRight="10dp"
-                            android:layout_width="190dp"
-                            android:layout_height="180dp">
+                            android:layout_width="160dp"
+                            android:layout_height="160dp">
+                            <LinearLayout
+                                android:padding="20dp"
+                                android:layout_width="match_parent"
+                                android:layout_height="match_parent"
+                                android:orientation="vertical">
+                                <LinearLayout
+                                    android:gravity="center_horizontal"
+                                    android:layout_width="match_parent"
+                                    android:layout_height="wrap_content">
+                                    <ImageView
+                                        android:layout_width="wrap_content"
+                                        android:layout_height="wrap_content"
+                                        android:src="@drawable/people">
+                                    </ImageView>
+                                </LinearLayout>
+                                <LinearLayout
+                                    android:layout_marginTop="20dp"
+                                    android:gravity="center_horizontal"
+                                    android:layout_width="match_parent"
+                                    android:layout_height="wrap_content">
+                                   <TextView
+                                       android:layout_width="wrap_content"
+                                       android:layout_height="wrap_content"
+                                       android:textSize="15dp"
+                                       android:text="Mutawwif EMRAZ"
+                                       android:textStyle="bold"/>
+                                </LinearLayout>
 
-                        </Button>
-                        <Button
-                            android:layout_gravity="right"
-                            android:layout_width="190dp"
-                            android:layout_height="180dp">
+                            </LinearLayout>
 
-                        </Button>
 
+                        </androidx.cardview.widget.CardView>
+                        <androidx.cardview.widget.CardView
+                            app:cardElevation="5dp"
+                            app:cardCornerRadius="15dp"
+                            app:cardBackgroundColor="@color/lavender"
+                            android:layout_marginRight="10dp"
+                            android:layout_width="160dp"
+                            android:layout_height="160dp">
+                            <LinearLayout
+                                android:padding="20dp"
+                                android:layout_width="match_parent"
+                                android:layout_height="match_parent"
+                                android:orientation="vertical">
+                                <LinearLayout
+                                    android:gravity="center_horizontal"
+                                    android:layout_width="match_parent"
+                                    android:layout_height="wrap_content">
+                                    <ImageView
+                                        android:layout_width="wrap_content"
+                                        android:layout_height="wrap_content"
+                                        android:src="@drawable/hotelm">
+                                    </ImageView>
+                                </LinearLayout>
+                                <LinearLayout
+                                    android:layout_marginTop="20dp"
+                                    android:gravity="center_horizontal"
+                                    android:layout_width="match_parent"
+                                    android:layout_height="wrap_content">
+                                    <TextView
+                                        android:layout_width="wrap_content"
+                                        android:layout_height="wrap_content"
+                                        android:textSize="15dp"
+                                        android:text="Peginapan"
+                                        android:textStyle="bold"/>
+                                </LinearLayout>
+
+                            </LinearLayout>
+
+
+                        </androidx.cardview.widget.CardView>
                     </LinearLayout>
 
 
@@ -125,19 +190,84 @@
                         android:layout_height="wrap_content"
                         android:orientation="horizontal"
                         >
-                        <Button
+                        <androidx.cardview.widget.CardView
+                            app:cardElevation="5dp"
+                            app:cardCornerRadius="15dp"
+                            app:cardBackgroundColor="@color/lavender"
                             android:layout_marginRight="10dp"
-                            android:layout_width="190dp"
-                            android:layout_height="180dp">
+                            android:layout_width="160dp"
+                            android:layout_height="160dp">
+                            <LinearLayout
+                                android:padding="20dp"
+                                android:layout_width="match_parent"
+                                android:layout_height="match_parent"
+                                android:orientation="vertical">
+                                <LinearLayout
+                                    android:gravity="center_horizontal"
+                                    android:layout_width="match_parent"
+                                    android:layout_height="wrap_content">
+                                    <ImageView
+                                        android:layout_width="wrap_content"
+                                        android:layout_height="wrap_content"
+                                        android:src="@drawable/people">
+                                    </ImageView>
+                                </LinearLayout>
+                                <LinearLayout
+                                    android:layout_marginTop="20dp"
+                                    android:gravity="center_horizontal"
+                                    android:layout_width="match_parent"
+                                    android:layout_height="wrap_content">
+                                    <TextView
+                                        android:layout_width="wrap_content"
+                                        android:layout_height="wrap_content"
+                                        android:textSize="15dp"
+                                        android:text="Mutawwif EMRAZ"
+                                        android:textStyle="bold"/>
+                                </LinearLayout>
 
-                        </Button>
-                        <Button
-                            android:layout_gravity="right"
-                            android:layout_width="190dp"
-                            android:layout_height="180dp">
+                            </LinearLayout>
 
-                        </Button>
 
+                        </androidx.cardview.widget.CardView>
+                        <androidx.cardview.widget.CardView
+                            app:cardElevation="5dp"
+                            app:cardCornerRadius="15dp"
+                            app:cardBackgroundColor="@color/lavender"
+                            android:layout_marginRight="10dp"
+                            android:layout_width="160dp"
+                            android:layout_height="160dp">
+                            <LinearLayout
+                                android:padding="20dp"
+                                android:layout_width="match_parent"
+                                android:layout_height="match_parent"
+                                android:orientation="vertical">
+                                <LinearLayout
+                                    android:gravity="center_horizontal"
+                                    android:layout_width="match_parent"
+                                    android:layout_height="wrap_content">
+                                    <ImageView
+                                        android:layout_width="wrap_content"
+                                        android:layout_height="wrap_content"
+                                        android:src="@drawable/gift">
+                                    </ImageView>
+                                </LinearLayout>
+                                <LinearLayout
+                                    android:layout_marginTop="20dp"
+                                    android:gravity="center_horizontal"
+                                    android:layout_width="match_parent"
+                                    android:layout_height="wrap_content">
+                                    <TextView
+                                        android:layout_width="wrap_content"
+                                        android:layout_height="wrap_content"
+                                        android:textSize="15dp"
+                                        android:text="Cenderahati"
+                                        android:textStyle="bold"/>
+                                </LinearLayout>
+
+                            </LinearLayout>
+
+
+                        </androidx.cardview.widget.CardView>
                     </LinearLayout>
 
 
@@ -153,23 +283,145 @@
                         android:layout_height="wrap_content"
                         android:orientation="horizontal"
                         >
-                        <Button
+                        <androidx.cardview.widget.CardView
+                            app:cardElevation="5dp"
+                            app:cardCornerRadius="15dp"
+                            app:cardBackgroundColor="@color/lavender"
                             android:layout_marginRight="10dp"
-                            android:layout_width="190dp"
-                            android:layout_height="180dp">
+                            android:layout_width="160dp"
+                            android:layout_height="160dp">
+                            <LinearLayout
+                                android:padding="20dp"
+                                android:layout_width="match_parent"
+                                android:layout_height="match_parent"
+                                android:orientation="vertical">
+                                <LinearLayout
+                                    android:gravity="center_horizontal"
+                                    android:layout_width="match_parent"
+                                    android:layout_height="wrap_content">
+                                    <ImageView
+                                        android:layout_width="wrap_content"
+                                        android:layout_height="wrap_content"
+                                        android:src="@drawable/people">
+                                    </ImageView>
+                                </LinearLayout>
+                                <LinearLayout
+                                    android:layout_marginTop="20dp"
+                                    android:gravity="center_horizontal"
+                                    android:layout_width="match_parent"
+                                    android:layout_height="wrap_content">
+                                    <TextView
+                                        android:layout_width="wrap_content"
+                                        android:layout_height="wrap_content"
+                                        android:textSize="15dp"
+                                        android:text="Mutawwif EMRAZ"
+                                        android:textStyle="bold"/>
+                                </LinearLayout>
 
-                        </Button>
-                        <Button
-                            android:layout_gravity="right"
-                            android:layout_width="190dp"
-                            android:layout_height="180dp">
+                            </LinearLayout>
 
-                        </Button>
 
+                        </androidx.cardview.widget.CardView>
+                        <androidx.cardview.widget.CardView
+                            app:cardElevation="5dp"
+                            app:cardCornerRadius="15dp"
+                            app:cardBackgroundColor="@color/lavender"
+                            android:layout_marginRight="10dp"
+                            android:layout_width="160dp"
+                            android:layout_height="160dp">
+                            <LinearLayout
+                                android:padding="20dp"
+                                android:layout_width="match_parent"
+                                android:layout_height="match_parent"
+                                android:orientation="vertical">
+                                <LinearLayout
+                                    android:gravity="center_horizontal"
+                                    android:layout_width="match_parent"
+                                    android:layout_height="wrap_content">
+                                    <ImageView
+                                        android:layout_width="wrap_content"
+                                        android:layout_height="wrap_content"
+                                        android:src="@drawable/hotelm">
+                                    </ImageView>
+                                </LinearLayout>
+                                <LinearLayout
+                                    android:layout_marginTop="20dp"
+                                    android:gravity="center_horizontal"
+                                    android:layout_width="match_parent"
+                                    android:layout_height="wrap_content">
+                                    <TextView
+                                        android:layout_width="wrap_content"
+                                        android:layout_height="wrap_content"
+                                        android:textSize="15dp"
+                                        android:text="Peginapan"
+                                        android:textStyle="bold"/>
+                                </LinearLayout>
+
+                            </LinearLayout>
+
+
+                        </androidx.cardview.widget.CardView>
                     </LinearLayout>
 
 
                 </LinearLayout>
+                <LinearLayout
+                    android:padding="10dp"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal">
+                    <LinearLayout
+                        android:gravity="center_horizontal"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal"
+                        >
+                        <androidx.cardview.widget.CardView
+                            app:cardElevation="5dp"
+                            app:cardCornerRadius="15dp"
+                            app:cardBackgroundColor="@color/lavender"
+                            android:layout_marginRight="10dp"
+                            android:layout_width="160dp"
+                            android:layout_height="160dp">
+                            <LinearLayout
+                                android:padding="20dp"
+                                android:layout_width="match_parent"
+                                android:layout_height="match_parent"
+                                android:orientation="vertical">
+                                <LinearLayout
+                                    android:gravity="center_horizontal"
+                                    android:layout_width="match_parent"
+                                    android:layout_height="wrap_content">
+                                    <ImageView
+                                        android:layout_width="wrap_content"
+                                        android:layout_height="wrap_content"
+                                        android:src="@drawable/people">
+                                    </ImageView>
+                                </LinearLayout>
+                                <LinearLayout
+                                    android:layout_marginTop="20dp"
+                                    android:gravity="center_horizontal"
+                                    android:layout_width="match_parent"
+                                    android:layout_height="wrap_content">
+                                    <TextView
+                                        android:layout_width="wrap_content"
+                                        android:layout_height="wrap_content"
+                                        android:textSize="15dp"
+                                        android:text="Mutawwif EMRAZ"
+                                        android:textStyle="bold"/>
+                                </LinearLayout>
+
+                            </LinearLayout>
+
+
+                        </androidx.cardview.widget.CardView>
+                    </LinearLayout>
+
+
+                </LinearLayout>
+
+
+
 
             </LinearLayout>
 
@@ -181,7 +433,7 @@
             <Button
                 android:layout_marginBottom="50dp"
                 android:pointerIcon="arrow"
-                android:layout_gravity="bottom|right"
+                android:layout_gravity="bottom|center"
                 android:id="@+id/submit"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
